--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "author": "wararyo",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-frontnote": "^2.0.1",
@@ -24,5 +23,7 @@
     "gulp-sass-glob": "^1.0.8",
     "gulp-uglify": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "browser-sync": "^2.26.7"
+  }
 }
